--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,11 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <string name="hurt">Was anyone hurt in the accident?</string>
+    <string name="owner">Are you the owner of the vehicle</string>
+    <string name="date">17/4/2019</string>
+    <string name="time">17:00</string>
+    <string name="drive">Are you Driving the vehicle at the point of the accident?</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
